// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper should render 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-sc-1if08u1-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-sc-1if08u1-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Wrapper should render different label positions 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-sc-1if08u1-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-sc-1if08u1-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="left"
/>
`;

exports[`Wrapper should render different label positions 2`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-sc-1if08u1-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-sc-1if08u1-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="right"
/>
`;

exports[`Wrapper should render different label positions 3`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-sc-1if08u1-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-sc-1if08u1-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="top"
/>
`;

exports[`Wrapper should render different label positions 4`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-sc-1if08u1-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          ";font-size:",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-sc-1if08u1-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="bottom"
/>
`;
